Fix hero button text wrap

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,13 @@
     line-height: 8rem;
   }
 
+  @media only screen and (max-width: 640px) {
+    h1 {
+      font-size: 6rem;
+      line-height: 6rem;
+    }
+  }
+
   h3 {
     @apply font-bold tracking-tight;
     font-size: 3.6rem;
